--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
   <!-- Sections will go here -->
-  <script src="script.js"></script>
 <section id="home">
-  <h1>Hi, I'm Tanuja</h1>
+  <h1>Hi, I'm Tanuja Sontakke</h1>
   <p>I design user-first digital experiences.</p>
 </section>
 <section id="projects">
@@ -34,5 +33,6 @@
   </form>
 </section>
 <button id="themeToggle">Toggle Theme</button>
+<script src="script.js"></script>
 </body>
 </html>
