--- a/index.html
+++ b/index.html
@@ -10,27 +10,56 @@
   <!-- Sections will go here -->
 <section id="home">
   <h1>Hi, I'm Tanuja Sontakke</h1>
-  <p>I design user-first digital experiences.</p>
+  <p>AI-leaning Software Engineer crafting scalable backend systems and LLM-integrated web experiences.</p>
+  <p><em>Actively seeking full-time opportunities in AI/LLM engineering, backend development, or full-stack roles.</em></p>
+</section>
+  <section id="about">
+  <h2>About Me</h2>
+  <p>
+    I'm a recent Master's graduate in Computer Science from Northern Arizona University, with 4+ years of experience building secure, scalable backend systems and deploying AI-integrated applications. My work spans Flask-based inference APIs, JWT-secured REST architectures, and CI/CD pipelines on Azure and AWS.
+  </p>
+  <p>
+    My recent focus has been on deploying academic LLM chatbots using LLaMA 2, Docker, and Gradio — integrating real-time telemetry and state management for performance optimization. With hands-on experience in cloud-native tools, infrastructure-as-code (Terraform, Ansible), and monitoring systems like Azure Monitor, I specialize in bridging robust backend engineering with modern AI capabilities.
+  </p>
+  <p>
+    I thrive in environments where backend performance, user-centric design, and intelligent automation intersect. I'm currently open to full-time software engineering roles where I can contribute to building reliable AI tools, ML infra, or modern SaaS platforms.
+  </p>
 </section>
 <section id="projects">
   <h2>Projects</h2>
   <div class="project-grid">
     <div class="card">
-      <h3>TaskMate</h3>
-      <p>Minimal To-Do App focused on clean UX and dark/light theme support.</p>
-      <a href="#">View Project</a>
+      <h3>LLM Academic Chatbot</h3>
+      <p>Flask-based chatbot using LLaMA 2 with Docker and Gradio, optimized for multi-turn academic Q&A with telemetry-backed monitoring.</p>
+      <p><strong>Tech:</strong> LLaMA2, Flask, Gradio, Docker, Azure Monitor</p>
+      <a href="#">[Demo or GitHub]</a>
+    </div>
+
+    <div class="card">
+      <h3>Admin Portal with Role-based Access</h3>
+      <p>Built secure REST APIs with JWT+RBAC, CI/CD pipelines, and real-time monitoring to manage multi-role access workflows.</p>
+      <p><strong>Tech:</strong> Flask, MySQL, JWT, GitHub Actions, Azure Monitor</p>
+      <a href="#">[Demo or GitHub]</a>
+    </div>
+
+    <div class="card">
+      <h3>Online MCQ Examination System</h3>
+      <p>Secure exam platform with randomized questions, timers, and instructor dashboards — deployed on Tomcat with Oracle DB.</p>
+      <p><strong>Tech:</strong> Java, JSP, Hibernate, Oracle, Apache Tomcat</p>
+      <a href="#">[Demo or GitHub]</a>
     </div>
     <!-- Add more cards as needed -->
   </div>
 </section>
 <section id="contact">
   <h2>Contact Me</h2>
-  <form>
-    <input type="text" placeholder="Your Name" required />
-    <input type="email" placeholder="Your Email" required />
-    <textarea placeholder="Your Message" required></textarea>
-    <button type="submit">Send</button>
-  </form>
+  <p>Email: <a href="mailto:sontakke21.tanuja@gmail.com">sontakke21.tanuja@gmail.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/tanuja-sontakke/" target="_blank">linkedin.com/in/tanuja-sontakke</a></p>
+  <p>GitHub: <a href="https://github.com/Tanujasontakke" target="_blank">github.com/Tanujasontakke</a></p>
+</section>
+  <section id="cta">
+  <h2>Let’s Connect</h2>
+  <p>I’m open to collaboration, internships, and full-time roles in AI, backend, or platform engineering — let’s build something impactful together!</p>
 </section>
 <button id="themeToggle">Toggle Theme</button>
 <script src="script.js"></script>
