--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 <body>
   <!-- Sections will go here -->
-<section id="home">
-  <h1>Hi, I'm Tanuja Sontakke</h1>
-  <p>AI-leaning Software Engineer crafting scalable backend systems and LLM-integrated web experiences.</p>
-  <p><em>Actively seeking full-time opportunities in AI/LLM engineering, backend development, or full-stack roles.</em></p>
+<section id="hero">
+  <div class="hero-content">
+    <h1>Hi, I'm <span>Tanuja Sontakke</span></h1>
+    <p class="tagline">AI-focused Software Engineer crafting scalable systems and LLM-integrated experiences.</p>
+    <p class="availability">🎯 Actively seeking full-time roles in AI/LLM engineering, backend, or full-stack development.</p>
+  </div>
 </section>
   <section id="about">
   <h2>About Me</h2>
