--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <!-- Sections will go here -->
-<section id="hero">
-  <div class="hero-content">
+<section id="home">
+   <div class="hero-content">
     <h1>Hi, I'm <span>Tanuja Sontakke</span></h1>
     <p class="tagline">AI-focused Software Engineer crafting scalable systems and LLM-integrated experiences.</p>
     <p class="availability">🎯 Actively seeking full-time roles in AI/LLM engineering, backend, or full-stack development.</p>
